@@ -137,6 +137,65 @@ tdesc_end_compatible (struct gdb_xml_parser *parser,
   tdesc_add_compatible (data->tdesc, arch);
 }
 
+/* Handle the end of a <device> element and its value.  */
+
+static void
+tdesc_start_device (struct gdb_xml_parser *parser,
+		    const gdb_xml_element *element,
+		    void *user_data, std::vector<gdb_xml_value> &attributes)
+{
+  tdesc_parsing_data *data = (struct tdesc_parsing_data *) user_data;
+  tdesc_device *device = new tdesc_device ();
+
+  gdb_xml_value *attr;
+
+  attr = xml_find_attribute (attributes, "vendor-id");
+  if (attr != nullptr)
+    device->vendor_id = * (ULONGEST *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "target-id");
+  if (attr != nullptr)
+    device->target_id = * (ULONGEST *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "family");
+  if (attr != nullptr)
+    device->family = (char *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "model");
+  if (attr != nullptr)
+    device->model = (char *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "stepping");
+  if (attr != nullptr)
+    device->stepping = * (ULONGEST *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "name");
+  if (attr != nullptr)
+    device->name = (char *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "pci-slot");
+  if (attr != nullptr)
+    device->pci_slot = (char *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "uuid");
+  if (attr != nullptr)
+    device->uuid = (char *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "total-cores");
+  if (attr != nullptr)
+    device->total_cores = * (ULONGEST *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "total-threads");
+  if (attr != nullptr)
+    device->total_threads = * (ULONGEST *) attr->value.get ();
+
+  attr = xml_find_attribute (attributes, "subdevice-id");
+  if (attr != nullptr)
+    device->subdevice_id = * (ULONGEST *) attr->value.get ();
+
+  set_tdesc_device_info (data->tdesc, device);
+}
+
 /* Handle the start of a <target> element.  */
 
 static void
@@ -588,6 +647,21 @@ static const struct gdb_xml_element feature_children[] = {
   { NULL, NULL, NULL, GDB_XML_EF_NONE, NULL, NULL }
 };
 
+static const struct gdb_xml_attribute device_attributes[] = {
+  { "vendor-id", GDB_XML_AF_OPTIONAL, gdb_xml_parse_attr_ulongest, NULL },
+  { "target-id", GDB_XML_AF_OPTIONAL, gdb_xml_parse_attr_ulongest, NULL },
+  { "family", GDB_XML_AF_OPTIONAL, NULL, NULL },
+  { "model", GDB_XML_AF_OPTIONAL, NULL, NULL },
+  { "stepping", GDB_XML_AF_OPTIONAL, gdb_xml_parse_attr_ulongest, NULL },
+  { "name", GDB_XML_AF_OPTIONAL, NULL, NULL },
+  { "pci-slot", GDB_XML_AF_OPTIONAL, NULL, NULL },
+  { "uuid", GDB_XML_AF_OPTIONAL, NULL, NULL },
+  { "total-cores", GDB_XML_AF_OPTIONAL, gdb_xml_parse_attr_ulongest, NULL },
+  { "total-threads", GDB_XML_AF_OPTIONAL, gdb_xml_parse_attr_ulongest, NULL },
+  { "subdevice-id", GDB_XML_AF_OPTIONAL, gdb_xml_parse_attr_ulongest, NULL},
+  { NULL, GDB_XML_EF_NONE, NULL, NULL }
+};
+
 static const struct gdb_xml_attribute target_attributes[] = {
   { "version", GDB_XML_AF_NONE, NULL, NULL },
   { NULL, GDB_XML_AF_NONE, NULL, NULL }
@@ -600,6 +674,8 @@ static const struct gdb_xml_element target_children[] = {
     NULL, tdesc_end_osabi },
   { "compatible", NULL, NULL, GDB_XML_EF_OPTIONAL | GDB_XML_EF_REPEATABLE,
     NULL, tdesc_end_compatible },
+  { "device", device_attributes, NULL, GDB_XML_EF_OPTIONAL,
+    tdesc_start_device, NULL },
   { "feature", feature_attributes, feature_children,
     GDB_XML_EF_OPTIONAL | GDB_XML_EF_REPEATABLE,
     tdesc_start_feature, NULL },
